# Auth

./: .gitignore  Makefile  main.py  pyproject.toml  uwsgi.ini  uwsgi.md
.github/workflows/: oauth.yaml
authentication/: apps.py  models.py  urls.py  views.py
authentication/adapters/: social_account_adapter.py
authentication/clients/: kafka_client.py
authentication/migrations/: 0001_initial.py
authentication/routers/: access_token_router.py  refresh_token_router.py  user_profile_router.py
authentication/serializers/: access_token_serializer.py  log_serializer.py  refresh_token_serializer.py  user_profile_serializer.py
authentication/services/: access_token_service.py  refresh_token_service.py  user_profile_service.py
authentication/signals/: signals.py  user_profile_signal.py
authentication/urls/: access_token_url.py  refresh_token_url.py  user_profile_url.py
authentication/utils/: jwt_decoder.py
authentication/views/: __init__.py  access_token_view.py  refresh_token_view.py  user_profile_view.py
cert/: urls.py  views.py
config/: settings.py  urls.py
config/settings/: __init__.md  __init__.py  base.py  jwt.py  kafka.py  logging.py  main.py  production.py
logs/: logs.md
oauth/: serializers.py  tests.py  urls.py  views.py
