[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "cryptography>=45.0.4",
]

[tool.setuptools]
packages = ["config", "oauth"]

[tool.setuptools.packages.find]
include = ["config*", "oauth*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[dependency-groups]
dev = [
]